<resources>
    <string name="app_name">Gestion Deportiva</string>
    <string name="btnIniciarSesion">Iniciar Sesion</string>
    <string name="example_unisimon_edu_co">example@unisimon.edu.co</string>
    <string name="password">*****</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="fecha_de_asignacion">Fecha de Asignacion</string>
    <string name="hora">Hora</string>
    <string name="name">Name</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="_00_00_am_pm">00:00 AM/PM</string>
    <string name="direccion">Carrera 18 # 55 80</string>
    <string name="codigo">Codigo</string>
    <string name="usuario">jbaldovino3</string>
    <string name="telefono">Telefono</string>
    <string name="user">Usuario</string>
    <string name="code">201611277564</string>
    <string name="actualizar">Actualizar</string>
    <string name="deporte">Deporte</string>
    <string name="futbol">Futbol</string>
    <string name="image">image</string>
    <string name="contrasena">Contraseña</string>
    <string name="street">Direccion</string>
    <string name="telef">3205328800</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="DescripcionBienestar">Unisimón, entre las universidades con mejor desempeño durante los Juegos Regionales de Ascun | Los atletas se hicieron merecedores de 27 medallas en total: 10 de oro, 10 de plata y 7 de bronce en judo, karatedo, natación, taekwondo, atletismo y tenis de campo, ubicándose entre las diez primeras universidades con mejor desempeño en el certamen deportivo</string>
    <string name="btnAgregarUsuario">Button</string>
    <string name="todo">TODO</string>
    <string name="deportistas">Deportistas</string>
    <string name="deportes">Deportes</string>
    <string name="horario">Horario</string>
    <string name="actividades">Actividades</string>
    <string name="torneos">Torneos</string>
    <string name="nombres">Nombres</string>
    <string name="cod">123456789</string>
    <string name="apellidos">Apellidos</string>
    <string name="agregar">Agregar</string>
    <string name="nombre">Fulanito Jose</string>
    <string name="apellido">Perez Diaz</string>
    <string name="title_activity_horario">HorarioActivity</string>
    <string name="title_activity_torneos">TorneosActivity</string>
    <string name="title_activity_actividades">ActividadesActivity</string>
    <string name="formato_fecha">DD/MM/YYYY</string>
    <string name="fecha">Fecha</string>
    <string name="descripcion">Descripcion</string>
    <string name="agregar_torneo">Agregar Torneo</string>
    <string name="agregar_horario">Agregar Horario</string>
    <string name="agregar_actividad">Agregar Actividad</string>
    <string name="nick">Usuario</string>
    <string name="nickname">jbaldovino3</string>
    <string name="agregar_deportista">Agregar Deportista</string>
</resources>
